# weird-color-in-nova

NovaHaskellLSP/: package.json  tsconfig.json
NovaHaskellLSP/HaskellLSP.novaextension/: README.md  extension.json
NovaHaskellLSP/HaskellLSP.novaextension/Scripts/: lsp.js  main.js
NovaHaskellLSP/src/: lsp.ts  main.ts
free-monad/: free-monad.cabal
free-monad/app/: Main.hs
