cabal-version:      2.4
name:               free-monad
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             cjw
maintainer:         cjwcommuny@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable free-monad
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        DeriveFunctor,
        GADTs,
        StandaloneDeriving
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
